<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
        Added a new Model User for basic verification while register/login,
        implemented via common activityViewModel
        Error on:
            1. If already registered user tries to register
            2. On login
                a. If user is not registered
                b. Incorrect password
    -->
    <data>
        <variable
            name="user"
            type="com.udacity.shoestore.models.User" />
    </data>


    <!--
        Using ConstraintLayout for easy arrangement of Views
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.LoginFragment">

        <TextView
            android:id="@+id/text_header"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/label_email"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_24"
            android:ems="10"
            android:text="@={user.email}"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_email"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textAppearance="@style/TextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_email"
            app:layout_constraintTop_toBottomOf="@+id/label_email"
            app:layout_constraintVertical_bias="0.100000024" />

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_24"
            android:ems="10"
            android:text="@={user.password}"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_size"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:theme="@style/GoButton"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_button"
            app:layout_constraintEnd_toStartOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:theme="@style/GoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>